Alt - Enter again is broken under xwayland (in some Wine/Proton applications)
Previously I am mention here https://gitlab.freedesktop.org/daenzer/xserver/issues/1#note_53201 that pressing "Alt + Enter" in Wine/Proton application lead to crash XWayland.
Now with latest graphic stack the crashes not occurs but after pressing "Alt + Enter" gnome-shell process became consume a lot of CPU (interface became very unresposive only ssh or tty console helps control machine) and Wine/Proton application disappears from screen but their processes still remains running.
Under X session I am not observing this issue.